fixed some spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -57,7 +57,11 @@ input[type="file"] {
 }
 
 h1 {
-    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1em;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
@@ -67,13 +71,17 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 3px;
     font-size: 3em;
+    font-weight: 100;
+}
+
+.squeezr {
+    font-weight: bold;
 }
 
 .formDiv {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10%;
 }
 
 form * {
